# walletsuite-tx-compiler

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.check.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: calldata.ts  compile.rs  compile.ts  constants.rs  error.rs  errors.ts  evm.rs  evm.ts  index.ts  lib.rs  review.rs  review.ts  tron-address.ts  tron-proto.ts  tron.rs  tron.ts  tron_address.rs  tron_proto.rs  types.rs  types.ts  validate.rs  validate.ts
test/: calldata.test.ts  compile.test.ts  errors.test.ts  evm.test.ts  fixtures.ts  review.test.ts  tron-address.test.ts  tron-proto.test.ts  tron.test.ts  validate.test.ts
tests/: canonical.rs
tests/fixtures/: canonical.json
